--- a/SNWJFColeta/css/main.css
+++ b/SNWJFColeta/css/main.css
@@ -1,16 +1,34 @@
+:root {
+  --title-color: #322153;
+  --primary-color: #34cb79;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
-/*Box Model*/
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+a {
+  text-decoration: none;
 }
 
-.content {
-  width: 90%;
-  max-width: 1100px;
-  margin: 0 auto;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Ubuntu, sans-serif;
+  color: var(--title-color);
+
+}
+
+body {
+  background: #f0f0f5;
+  -webkit-font-smoothing: antialiased;
+
 }
