--- a/-MaratonaDevRocketseat/SNWJFColeta/src/views/create-point.html
+++ b/-MaratonaDevRocketseat/SNWJFColeta/src/views/create-point.html
@@ -20,9 +20,16 @@
       <legend>
         <h2>Dados da entidade</h2>
       </legend>
-      <div class="field">
-        <label for="name">Nome da entidade</label>
-        <input type="text" name="name" required="required">
+
+      <div class="field-group">
+        <div class="field">
+          <label for="name">Nome da entidade</label>
+          <input type="text" name="name" required="required">
+        </div>
+        <div class="field">
+          <label for="name">Imagem da entidade</label>
+          <input type="url" name="imag" placeholder="http://" required="required">
+        </div>
       </div>
 
       <div class="field-group">
@@ -59,6 +66,7 @@
     <fieldset>
       <legend>
         <h2>Ítems de coleta</h2>
+        <span>Selecione um ou mais ítems abaixo</span>
       </legend>
 
       <div class="items-grid">
