Busca por cidades

--- a/-MaratonaDevRocketseat/SNWJFColeta/src/views/partials/modal.html
+++ b/-MaratonaDevRocketseat/SNWJFColeta/src/views/partials/modal.html
@@ -5,9 +5,9 @@
       <a href="#">Fechar</a>
     </div>
     <form action="/search">
-      <label for="search">Cidade ou Estado</label>
+      <label for="search">Digite o nome da Cidade</label>
       <div class="search field">
-        <input type="text" name="search" placeholder="Pesquise por Cidade ou Estado">
+        <input type="text" name="search" placeholder="Pesquise por Cidade">
         <button>
           <img src="/assets/icones/search.svg" alt="Buscar">
         </button>
