--- a/-MaratonaDevRocketseat/SNWJFColeta/src/views/create-point.html
+++ b/-MaratonaDevRocketseat/SNWJFColeta/src/views/create-point.html
@@ -8,13 +8,14 @@
 
 {% block styles %}
   <link rel="stylesheet" href="/css/create-point.css">
+  <link rel="stylesheet" href="/css/modal.css">
 {% endblock styles %}
 
 {% block content %}
   <!-- Manu -->
-  {% include "partials/page-header.html"%}
+  {% include "partials/page-header.html" %}
 
-  <form action="">
+  <form action="/save-point" method="POST">
     <h1>Cadastro do ponto de coleta</h1>
     <fieldset>
       <legend>
@@ -27,20 +28,20 @@
           <input type="text" name="name" required="required">
         </div>
         <div class="field">
-          <label for="name">Imagem da entidade</label>
-          <input type="url" name="imag" placeholder="http://" required="required">
+          <label for="image">Imagem da entidade</label>
+          <input type="url" name="image" placeholder="http://" required="required">
         </div>
       </div>
 
       <div class="field-group">
         <div class="field">
-          <label for="address">Endereço</label>
+          <label for="address">Endereço / Bairro</label>
           <input type="text" name="address" required="required">
         </div>
 
         <div class="field">
-          <label for="number">Numero / Complemento</label>
-          <input type="text" name="address" required="required">
+          <label for="address2">Numero / Complemento</label>
+          <input type="text" name="address2" required="required">
         </div>
       </div>
 
@@ -74,23 +75,23 @@
           <img src="./assets/icones/lampadas.svg" alt="Lâmpadas">
           <span>Lâmpadas</span>
         </li>
-        <li data-id="2">
+        <li data-id="Pilhas e Baterias">
           <img src="./assets/icones/baterias.svg" alt="Pilhas e Baterias">
           <span>Pilhas e Baterias</span>
         </li>
-        <li data-id="3">
+        <li data-id="Papéis e papelão">
           <img src="./assets/icones/papeis-papelao.svg" alt="Papéis e papelão">
           <span>Papéis e papelão</span>
         </li>
-        <li data-id="4">
+        <li data-id="Resíduos Eletrônicos">
           <img src="./assets/icones/eletronicos.svg" alt="Resíduos Eletrônicos">
           <span>Resíduos Eletrônicos</span>
         </li>
-        <li data-id="5">
+        <li data-id="Resíduos Organicos">
           <img src="./assets/icones/organicos.svg" alt="Resíduos Organicos">
           <span>Resíduos Organicos</span>
         </li>
-        <li data-id="6">
+        <li data-id="Óleo de Cozinha">
           <img src="./assets/icones/oleo.svg" alt="Óleo de Cozinha">
           <span>Óleo de Cozinha</span>
         </li>
@@ -100,7 +101,15 @@
     </fieldset>
     <button type="submit">Cadastrar ponto de coleta</button>
   </form>
+
 {% endblock content %}
+
+{# Modal de cadastro concluído #}
+{% block modal%}
+  {% if saved %}
+    {% include "partials/point-created.html" %}
+  {% endif %}
+{% endblock modal%}
 
 {% block scripts %}
   <script src="./scripts/create-point.js"></script>
