--- a/-MaratonaDevRocketseat/nextlevelweek#2/web/src/assets/styles/global.css
+++ b/-MaratonaDevRocketseat/nextlevelweek#2/web/src/assets/styles/global.css
@@ -41,15 +41,22 @@ body {
   align-items: center;
   justify-content: center;
 }
-body,input,button,textarea{
+
+body,
+input,
+button,
+textarea {
   font: 500 1.6rem Poppins;
+  /* font: 700 1.6rem Archivo; */
 }
-.container{
+
+.container {
   width: 90vw;
   max-width: 700px;
 }
-@media(min-width: 700px){
-  :root{
+
+@media(min-width: 700px) {
+  :root {
     font-size: 62.5%;
   }
 }
