--- a/-MaratonaDevRocketseat/nextlevelweek#2/web/src/pages/TeacherList/styles.css
+++ b/-MaratonaDevRocketseat/nextlevelweek#2/web/src/pages/TeacherList/styles.css
@@ -51,52 +51,6 @@
   width: 90%;
 }
 
-.teacher-item {
-  background: var(--color-box-base);
-  border: 1px solid var(--color-line-in-white);
-  border-radius: 0.8rem;
-  margin-top: 2.4rem;
-  overflow: hidden;
-}
-
-.teacher-item header {
-  padding: 3.2rem 2rem;
-  display: flex;
-  align-items: center;
-}
-
-.teacher-item header img {
-  width: 8rem;
-  height: 8rem;
-  border-radius: 50%;
-}
-
-.teacher-item header div {
-  margin-left: 2.4rem;
-}
-
-.teacher-item div strong {
-  font: 700 2.4rem;
-  display: block;
-  color: var(--color-text-title);
-}
-
-.teacher-item div span {
-  font-size: 1.6rem;
-  display: block;
-  margin-top: 0.4rem;
-}
-
-.teacher-item > p {
-  padding: 0 2rem;
-  font-size: 1.6rem;
-  line-height: 2.8rem;
-}
-
-.teacher-item footer{
-padding: 3.2rem;
-}
-
 @media(min-width:700px) {
   #page-teacher-list {
     max-width: 100%;
@@ -112,5 +66,11 @@ padding: 3.2rem;
 
   #search-teachers .input-block+.input-block {
     margin-top: 0;
+  }
+
+  #page-teacher-list main {
+    padding: 3.2rem 0;
+    max-width: 740px;
+    margin: auto;
   }
 }
