--- a/-MaratonaDevRocketseat/nextlevelweek#2/web/src/assets/styles/global.css
+++ b/-MaratonaDevRocketseat/nextlevelweek#2/web/src/assets/styles/global.css
@@ -10,7 +10,8 @@
   --color-title-in-primary: #FFFFFF;
   --color-text-in-primary: #dddbe1;
   --color-text-title: #32264D;
-  --color-text-complement: #9C98A6;
+  --color-select-background:   #f8f8fc;
+   --color-text-complement: #9C98A6;
   --color-text-base: #6A6180;
   --color-line-in-white: #E6E6F0;
   --color-input-background: #F8F8FC;
