--- a/-MaratonaDevRocketseat/nextlevelweek#2/web/src/assets/variaveis.css
+++ b/-MaratonaDevRocketseat/nextlevelweek#2/web/src/assets/variaveis.css
@@ -17,6 +17,7 @@
   --color-button-text: #FFFFFF;
   --color-box-base: #FFFFFF;
   --color-box-footer: #FAFAFC;
+  --color-secundary-dark-mob: #379461;
 
   font-size: 60%;
 }
